--- a/views/head_end.html
+++ b/views/head_end.html
@@ -1,8 +1,11 @@
 		<style>
 			* { margin: 0; padding: 0; border: 0; }
 			p, img { display: block; }
+			h1, h2, h3, h4, h5, h6 { font-style: normal; }
+			h2 { color: #000; padding: 10px 0px; line-height: 28px; }
+			h6 { padding-bottom: 16px; height: 20px; line-height: 20px; color: #777; font-weight: normal;  }
 			img { width: 100%; }
-			p { line-height: 24px; padding: 2px 0; }
-			.wrap { padding: 0 10px; color: #555; }
+			p { line-height: 24px; padding: 2px 0; font-size: 14px; }
+			.wrap { padding: 0px 10px 10px 10px; color: #555; }
 		</style>
 	</head>
