--- a/views/20141203/index.html
+++ b/views/20141203/index.html
@@ -2,7 +2,7 @@
 
 <h6>2014年12月03日</h6>
 
-<p>　　VR虛擬現實，神一般的視覺效果~~（囧）</p>
+<p>VR虛擬現實，神一般的視覺效果~~ (╯▼╰)/</p>
 
 <p><img src="http://localhost:3000/wx/20141203/0.jpg" alt="門票" title="" /></p>
 
